Adicionando campos local e vagas
