# storage/api-docs/api-docs.json
@@ -100,6 +100,14 @@
                                         "type": "string",
                                         "example": "Workshop de Laravel"
                                     },
+                                    "local": {
+                                        "type": "string",
+                                        "example": "Auditório Principal"
+                                    },
+                                    "vagas": {
+                                        "type": "integer",
+                                        "example": 50
+                                    },
                                     "data_inicio": {
                                         "type": "string",
                                         "format": "date-time",
@@ -330,6 +338,14 @@
                                     "descricao": {
                                         "type": "string",
                                         "example": "Workshop de Laravel Atualizado"
+                                    },
+                                    "local": {
+                                        "type": "string",
+                                        "example": "Auditório Principal"
+                                    },
+                                    "vagas": {
+                                        "type": "integer",
+                                        "example": 50
                                     },
                                     "data_inicio": {
                                         "type": "string",
@@ -576,6 +592,15 @@
                     "descricao": {
                         "type": "string",
                         "example": "Workshop de Laravel"
+                    },
+                    "local": {
+                        "type": "string",
+                        "example": "Auditório Principal",
+                        "nullable": true
+                    },
+                    "vagas": {
+                        "type": "integer",
+                        "example": 50
                     },
                     "data_inicio": {
                         "type": "string",
